--- a/InClass/Assignment7/EvanSitzes.html
+++ b/InClass/Assignment7/EvanSitzes.html
@@ -5,35 +5,164 @@
         <style>
             body {background-color:lightgray}
             h1   {color:blue}
-            p    {color:green}
-
-            table.visible {
-                visibility: visible
-            }
-
-            table.hidden {
-                visibility: hidden
-            }
         </style>
 
         <script>
-            var showingText = false;
-            function toggleText() {
-                if (showingText == false) {
-                    document.getElementById(id="toggleFirst").innerHTML = "Hi my name is Evan! I was born and raised in Arkansas, but I have lived in Japan and can actually speak 3 Asian languages (to varying degrees of ability).  I also work for a small tech startup in the Fayetteville area, and currently have several side projects to learn about various technologies, such as Hadoop, REST APIs, and web crawling.";
-                    document.getElementById(id="toggleFirstTitle").innerHTML = document.getElementById(id="toggleFirstTitle").innerHTML.replace("see", "hide");
-                    showingText = true;
-                } else {
-                    document.getElementById(id="toggleFirst").innerHTML = "";
-                    document.getElementById(id="toggleFirstTitle").innerHTML = document.getElementById(id="toggleFirstTitle").innerHTML.replace("hide", "see");
-                    showingText = false;
+            function calculateGrade() {
+                var student = new Student("Evan", "Sitzes");
+                student.addGradedActivity(86);
+                student.addGradedHomework(82);
+                student.setFinal(90, "A");
+                student.setMidterm(85, "B");
+                student.printGrade();
+                return false;
+            }
+
+            function Coursework() {
+                var scores = [];
+                var numberOfScores = 0;
+
+                this.averageScores = function () {
+                    var total = 0;
+
+                    if (numberOfScores == 0) { return 0; }
+
+                    var i;
+                    for (i = 0; i < scores.length; i++) {
+                        total   += scores[i];
+                    }
+                    return total / numberOfScores;
+                };
+
+                this.addScore = function (score) {
+                        var exam = new Exam();
+                        score = exam.checkScore(score);
+                        scores.push(score);
+                        numberOfScores++;
                 }
             }
 
-            function calculateGrade() {
-                alert("Hello! I am an alert box!!");
-                return false;
+            function Exam() {
+                var score;
+                var letterGrade;
+
+                this.checkScore = function (pScore) {
+                    if (pScore >= 0 && pScore <= 100) {
+                        return pScore;
+                    } else if (pScore > 0) {
+                        return 100;
+                    } else return 0;
+                };
+
+                this.checkLetterGrade = function (pLetterGrade) {
+                    var legalGrades = [];
+                    legalGrades.push("A");
+                    legalGrades.push("B");
+                    legalGrades.push("C");
+                    legalGrades.push("D");
+                    legalGrades.push("F");
+
+                    if (legalGrades.indexOf(pLetterGrade) >= 0) { 
+                        return pLetterGrade; 
+                    }
+                    alert("You have submitted a bad grade for an Exam, value of:" + pLetterGrade + ".");
+                    return "F";
+                };
+
+                this.getScore = function () {
+                    return score;
+                }
+
+                this.setScore = function (pScore) {
+                    score = this.checkScore(pScore);
+                };
+
+                this.getLetterGrade = function () {
+                    return letterGrade;
+                }
+
+                this.setLetterGrade = function (pLetterGrade) {
+                    letterGrade = this.checkLetterGrade(pLetterGrade);
+                };
             }
+
+
+            function Student(firstName, lastName) {
+                var firstName = firstName;
+                var lastName = lastName;
+                var midterm = new Exam();
+                var finalExam = new Exam();
+                var homework = new Coursework();
+                var inClassWork = new Coursework();
+
+                this.setMidterm = function (score, grade) {
+                    midterm.setScore(score);
+                    midterm.setLetterGrade(grade);
+                }
+
+                this.setFinal = function (score, grade) {
+                    finalExam.setScore(score);
+                    finalExam.setLetterGrade(grade);
+                    // alert(firstName + " " + lastName);
+
+                }
+
+                this.addGradedHomework = function (score) {
+                    homework.addScore(score);
+                }
+
+                this.addGradedActivity = function (score) {
+                    inClassWork.addScore(score);
+                    // alert(firstName + " " + lastName);
+                }
+
+                this.printGrade = function () {
+                    // DecimalFormat df = new DecimalFormat("#.00");
+                    var numberGrade = this.calculateNumberGrade();
+                    var letterGrade = this.calculateLetterGrate(numberGrade);
+
+                    // grade adjustment per professor's specifications
+                    letterGrade = this.examWeightedAdjustment(letterGrade);
+
+                    alert("Final course grade for " +
+                                        firstName + " " + lastName + ": " +
+                                        letterGrade + ", " + numberGrade + "%");
+
+                }
+
+                // method to ensure that final letter grade for the class cannot be lower than an exam grade
+                this.examWeightedAdjustment = function (letterGrade) {
+                    var lowestExam;
+                    var weightAdjustedScore;
+
+                    lowestExam = Math.max(midterm.getLetterGrade().charCodeAt(0) - 65, finalExam.getLetterGrade().charCodeAt(0) - 65);
+                    weightAdjustedScore = Math.min(lowestExam, letterGrade.charCodeAt(0));
+
+                    return String.fromCharCode(65 + weightAdjustedScore);
+                }
+
+                this.calculateNumberGrade = function () {
+                    return (.15 * inClassWork.averageScores()) +
+                            (.25 * homework.averageScores()) +
+                            (.25 * midterm.getScore()) +
+                            (.35 * finalExam.getScore());
+                }
+
+                this.calculateLetterGrate = function (grade) {
+                    if (grade >= 90) {
+                        return "A";
+                    } else if (grade >= 80 && grade < 90) {
+                        return "B";
+                    } else if (grade >= 70 && grade < 80) {
+                        return "C";
+                    } else if (grade >= 60 && grade < 70) {
+                        return "D";
+                    } else {
+                        return "F";
+                    }
+                }
+            }
+
 
         </script>
 
