Finished higher level function questions

--- a/InClass/Assignment8/assignment8.html
+++ b/InClass/Assignment8/assignment8.html
@@ -39,6 +39,10 @@
 		out = reverseString('a string');
 		outStr += "Got answer: " + out + "<br>";
 
+		outStr += "Trying reverseString('') - correct answer is '':<br>";
+		out = reverseString('');
+		outStr += "Got answer: " + out + "<br>";
+
 		document.getElementById("reverseStringOut").innerHTML = outStr;
 	}
 	
